--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
 
+# Ignore Python bytecode
+__pycache__/
+*.py[cod]
+
+# Ignore virtual environment
+venv/
+env/
+
+# Ignore system files
+.DS_Store
+
+# Ignore data files
+data/
+*.csv
