--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,62 @@
-
 # Ignore Python bytecode
 __pycache__/
 *.py[cod]
 
-# Ignore virtual environment
+# Ignore virtual environments
 venv/
 env/
+.env
 
 # Ignore system files
 .DS_Store
+Thumbs.db
 
 # Ignore data files
 data/
 *.csv
+*.xlsx
+*.json
+
+# Ignore logs
+*.log
+
+# Ignore IDE-specific files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Ignore Jupyter Notebook checkpoints
+.ipynb_checkpoints/
+
+# Ignore compiled Python files
+*.pyc
+
+# Ignore environment configuration
+.env
+
+# Ignore package distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Ignore Snowflake and Redshift connection files (if applicable)
+*snowflake*.json
+*redshift*.json
+
+# Ignore any local configuration files
+config.local.yaml
